<resources>
    <string name="app_name">Barcode Finder</string>
    <string name="action_settings">Settings</string>

    <string name="add_barcode">Add barcode</string>
    <string name="add_barcode_cancel">Cancel</string>

    <string name="barcodenumber_modal_prompt_title">New barcode</string>
    <string name="barcodenumber_modal_prompt">Enter new barcode number to look for</string>
    <string name="delete_barcode_list_element">Delete</string>
    <string name="title_activity_simple_scanner">SimpleScannerActivity</string>
    <string name="watchedbarcodes_preference_file_key">jantosi.personalproject.barcodefinder.watchedbarcodes</string>
    <string name="barcode_list_element_notfound_status">No matches yet</string>
    <string name="barcodes_list_element_found_status">Found %d times</string>
    <string name="barcode_starts_with_this_text">Barcode starts with this text</string>
    <string name="barcode_ends_with_this_text">Barcode ends with this text</string>
    <string name="barcode_contains_this_text">Barcode contains this text</string>
    <string name="exact_match">Exact match</string>
</resources>
